--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "npm": "^5.8.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-google-maps": "^9.4.5",
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "recompose": "^0.27.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
